# linux_clash_proxy

./: .gitignore  CODE_REVIEW.md  README.md  TROUBLESHOOTING.md  USAGE.md  config.example.yaml  logrotate.conf.template  proxy.sh  pyproject.toml
docs/: LOGROTATE.md
docs/plans/: 2026-04-09-ai-status-design.md  2026-04-09-ai-status-output.md  2026-04-09-cproxy-backend-design.md  2026-04-09-cproxy-backend-implementation.md  2026-04-09-raw-output-mode.md  (+14 more)
scripts/: install.sh
systemd/: clash-proxy-command.env.example  clash-proxy-refresh.service  clash-proxy-refresh.sh  clash-proxy-refresh.timer  clash-proxy.service  example-proxied-service.override.conf  generate-proxied-service.sh  install-systemd.sh
systemd-user/: cproxy-command.env.example  cproxy-refresh.service  cproxy-refresh.timer  cproxy.service  example-proxied-service.override.conf  generate-proxied-service.sh  install-systemd-user.sh
tests/: ai_status_test.sh  current_switch_color_test.sh  list_nodes_test_group_test.sh  proxy_env_test.sh  raw_output_mode_test.sh  render_rules_test.sh  review_fixes_test.sh  status_list_groups_test.sh  systemd_helper_scripts_test.sh  systemd_proxy_examples_test.sh  systemd_user_examples_test.sh  systemd_user_helper_scripts_test.sh  test_api_backend.py  test_backend_services.py  test_bootstrap_command.py  test_cli_bootstrap.py  test_diagnostics_and_proxy_commands.py  test_geodata.py  test_init_command.py  test_install_script.py  test_logs_command.py  test_migrate_from_legacy.py  test_query_commands.py  test_runtime_and_process.py  test_switch_command.py  usage_output_test.sh
(+21 files in other folders)
